# sensor-logging

./: .gitignore  CMakeLists.txt  readme.adoc
aux/: 90-pi-priority.conf
executables/: daily.py  dht22.py  filenames-to-padded-dates.py  minly.py
include/DHTXXD/: CMakeLists.txt  DHTXXD.c
include/_433D/: CMakeLists.txt  _433D.c
script/: common.py  control-structs.json  daily.py  filenames-to-padded-dates.py  generate-control-include.py  generate-machine-include.py  generate-sensors-include.py  get-latest-minly-readout.fish  get-lpd433-code-parameters.py  print-machine-include.sh  print-platform-header.sh  resource-usage-test.py  sensorhub.py  sensors.json  write-machine-include.py  write-sensors-include.py
src/: .gitignore  control.cpp  control.generated.cpp  csv.cpp  includes.hpp  io.cpp  machine.generated.cpp  main.cpp  sensors.cpp  sensors.generated.cpp  toml.cpp  util.cpp
test/: compare-dates.py  cron-test-0.py  data-size-test-0.py  sensor-test-0  sensor-test-1.py  sensor-test-3.cpp
